# UR5-Pick-and-Place-Simulation

./: .gitignore  LICENSE  README.md
catkin_ws/src/gazebo_ros_link_attacher/: CMakeLists.txt  package.xml
catkin_ws/src/gazebo_ros_link_attacher/include/: gazebo_ros_link_attacher.h
catkin_ws/src/gazebo_ros_link_attacher/scripts/: attach.py  attach2.py  detach.py  detach2.py
catkin_ws/src/gazebo_ros_link_attacher/src/: gazebo_ros_link_attacher.cpp
catkin_ws/src/gazebo_ros_link_attacher/srv/: SetStatic.srv
catkin_ws/src/levelManager/: CMakeLists.txt  package.xml
catkin_ws/src/levelManager/launch/: lego_world.launch
catkin_ws/src/levelManager/lego_models/X1-Y1-Z2/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X1-Y1-Z2/meshes/: X1-Y1-Z2.stl
catkin_ws/src/levelManager/lego_models/X1-Y2-Z1/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X1-Y2-Z1/meshes/: X1-Y2-Z1.stl
catkin_ws/src/levelManager/lego_models/X1-Y2-Z2/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X1-Y2-Z2-CHAMFER/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X1-Y2-Z2-CHAMFER/meshes/: X1-Y2-Z2-CHAMFER.stl
catkin_ws/src/levelManager/lego_models/X1-Y2-Z2-TWINFILLET/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X1-Y2-Z2-TWINFILLET/meshes/: X1-Y2-Z2-TWINFILLET.stl
catkin_ws/src/levelManager/lego_models/X1-Y2-Z2/meshes/: X1-Y2-Z2.stl
catkin_ws/src/levelManager/lego_models/X1-Y3-Z2/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X1-Y3-Z2-FILLET/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X1-Y3-Z2-FILLET/meshes/: X1-Y3-Z2-FILLET.stl
catkin_ws/src/levelManager/lego_models/X1-Y3-Z2/meshes/: X1-Y3-Z2.stl
catkin_ws/src/levelManager/lego_models/X1-Y4-Z1/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X1-Y4-Z1/meshes/: X1-Y4-Z1.stl
catkin_ws/src/levelManager/lego_models/X1-Y4-Z2/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X1-Y4-Z2/meshes/: X1-Y4-Z2.stl
catkin_ws/src/levelManager/lego_models/X2-Y2-Z2/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X2-Y2-Z2-FILLET/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/X2-Y2-Z2-FILLET/meshes/: X2-Y2-Z2-FILLET.stl
catkin_ws/src/levelManager/lego_models/X2-Y2-Z2/meshes/: X2-Y2-Z2.stl
catkin_ws/src/levelManager/lego_models/_spawn/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/costruzione-1/: model.config  model.sdf
catkin_ws/src/levelManager/lego_models/costruzione-2/: model.config  model.sdf
catkin_ws/src/levelManager/models/kinect/: README.md  model.sdf
catkin_ws/src/levelManager/models/modern_table/: model.config  model.sdf
catkin_ws/src/levelManager/models/modern_table/meshes/: modern_table.dae
catkin_ws/src/levelManager/models/robot_base/: model.config  model.sdf
catkin_ws/src/levelManager/models/robot_base/meshes/: robot_base.dae
catkin_ws/src/levelManager/scripts/: costruzioniParser.py  levelManager.py  pub.py
catkin_ws/src/levelManager/worlds/: main_scene.world
catkin_ws/src/motion_planning/: CMakeLists.txt  package.xml
catkin_ws/src/motion_planning/models/cafe_table/: model.sdf
catkin_ws/src/motion_planning/models/checkerboard/: checkerboard.sdf  model.config
catkin_ws/src/motion_planning/models/kinect/: model.sdf
catkin_ws/src/motion_planning/models/lego_X1-Y1-Z2/: model.config  model.json  model.sdf
catkin_ws/src/motion_planning/models/lego_X1-Y1-Z2/meshes/: X1-Y1-Z2.stl
catkin_ws/src/motion_planning/models/lego_X1-Y2-Z1/: model.config  model.json  model.sdf
catkin_ws/src/motion_planning/models/lego_X1-Y2-Z1/meshes/: X1-Y2-Z1.stl
catkin_ws/src/motion_planning/models/lego_X1-Y2-Z2/: model.config  model.sdf
catkin_ws/src/motion_planning/models/lego_X1-Y2-Z2-CHAMFER/: model.config  model.sdf
catkin_ws/src/motion_planning/models/lego_X1-Y2-Z2-TWINFILLET/: model.config  model.json  model.sdf
catkin_ws/src/motion_planning/models/lego_X1-Y3-Z2/: model.config  model.sdf
catkin_ws/src/motion_planning/models/lego_X1-Y3-Z2-FILLET/: model.config  model.json  model.sdf
catkin_ws/src/motion_planning/models/lego_X1-Y4-Z1/: model.config  model.json  model.sdf
catkin_ws/src/motion_planning/models/lego_X1-Y4-Z2/: model.config  model.json  model.sdf
catkin_ws/src/motion_planning/models/lego_X2-Y2-Z2/: model.config  model.json  model.sdf
catkin_ws/src/motion_planning/models/lego_X2-Y2-Z2-FILLET/: model.config  model.sdf
catkin_ws/src/motion_planning/models/ur5_base/: model.config
catkin_ws/src/motion_planning/models/work_table/: model.config  model.sdf
catkin_ws/src/motion_planning/scripts/: build_planning.py  building.json  controller.py  kinematics.py  motion_planning.py
catkin_ws/src/robot/robotName_description/: CMakeLists.txt  package.xml
catkin_ws/src/robot/robot_state_publisher/: CHANGELOG.rst  CMakeLists.txt  doc.dox  package.xml
catkin_ws/src/robot/robot_state_publisher/include/robot_state_publisher/: joint_state_listener.h  robot_state_publisher.h
catkin_ws/src/robot/robot_state_publisher/src/: joint_state_listener.cpp  robot_state_publisher.cpp  robot_state_publisher_node.cpp
catkin_ws/src/robot/robot_state_publisher/test/: frames_and_slashes.urdf  one_link.urdf  pr2.urdf  test_default_constructor.cpp  test_default_constructor.launch  test_frames_and_slashes.cpp  test_frames_and_slashes.launch  test_joint_states_bag.cpp  test_joint_states_bag.launch  test_one_link.cpp  test_one_link.launch  test_subclass.cpp  test_subclass.launch  test_two_links_change_fixed_joint.cpp  test_two_links_fixed_joint.cpp  test_two_links_fixed_joint_prefix.cpp  test_two_links_moving_joint.cpp  two_links_change_fixed_joint-launch.py  two_links_fixed_joint-launch.py  two_links_fixed_joint_prefix-launch.py  two_links_moving_joint-launch.py
catkin_ws/src/robot/universal_robot/ur_kinematics/: CMakeLists.txt
catkin_ws/src/vision/: CMakeLists.txt  package.xml
catkin_ws/src/vision/msg/: Lego_state.msg
catkin_ws/src/vision/scripts/: lego-vision.py
(+20 files in other folders)
