<package format="2">
  <name>robot_state_publisher</name>
  <version>1.15.2</version>
  <description>
    This package allows you to publish the state of a robot to
    <a href="http://ros.org/wiki/tf2">tf2</a>. Once the state gets published, it is
    available to all components in the system that also use <tt>tf2</tt>.
    The package takes the joint angles of the robot as input
    and publishes the 3D poses of the robot links, using a kinematic
    tree model of the robot. The package can both be used as a library
    and as a ROS node.  This package has been well tested and the code
    is stable. No major changes are planned in the near future.
  </description>

  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <author email="wim@willowgarage.com">Wim Meeussen</author>

  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="ian@ianthe.engineer">Ian McMahon</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  <url>http://wiki.ros.org/robot_state_publisher</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kdl_parser</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>rostime</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_kdl</depend>

  <build_depend>liborocos-kdl-dev</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>liborocos-kdl-dev</build_export_depend>

  <exec_depend>liborocos-kdl</exec_depend>

  <test_depend>rosbag</test_depend>
  <test_depend>rostest</test_depend>
</package>
